build process tuning
Signed-off-by: David Kral <david.k.kral@oracle.com>